# Botfactoryai_marketing

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  gmail_oauth_setup.py  main.py  pyproject.toml  render.yaml  render_web_service.py  requirements.txt  template.html  tizim.md
goldenpages_scraper/: __init__.py  cli.py  config.py  exporters.py  models.py  parsers.py  phone_leads.py  scraper.py  state.py  telegram_bot.py  utils.py
